...
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="0Xh-Pc-aP5">
                                <rect key="frame" x="0.0" y="155" width="375" height="45"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="ot7-Pb-liO"/>
                                </constraints>
                                <segments>
                                    <segment title="All"/>
                                    <segment title="Debit"/>
                                    <segment title="Deposit"/>
                                </segments>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="20"/>
                                    </userDefinedRuntimeAttribute>
...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1R1-8O-h9V">
                                                            <rect key="frame" x="59" y="82" width="57" height="24"/>
                                                            <constraints>
                                                                <constraint firstAttribute="width" constant="57" id="7SC-KV-HDV"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="10"/>
                                                            <state key="normal" title="Open Map">
                                                                <color key="titleColor" red="0.45098039220000002" green="0.37254901959999998" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            </state>
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                                    <integer key="value" value="4"/>
                                                                </userDefinedRuntimeAttribute>
...
